--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap");
 * {
   box-sizing: border-box;
 }
@@ -10,17 +11,22 @@ body {
   font-size: 16px;
   font-weight: 400;
   margin: 0;
+  background-color: #F0EFE9;
 }
 
 .btn-yellow {
   background-color: #F9D783;
   color: #191919;
-  border-color: 1 ps solid #F9D783;
+  border-color: 1px solid #F9D783;
   border-radius: 25px;
   padding: 8px 25px;
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
+}
+.btn-yellow i {
+  margin-left: 7px;
+  font-size: 0.9em;
 }
 .btn-yellow:hover {
   background-color: #191919;
@@ -28,9 +34,14 @@ body {
   color: #F0EFE9;
 }
 
-.btn-yellow > i {
-  margin-left: 7px;
-  font-size: 0.9em;
+.btn-transparent {
+  color: #191919;
+  border-color: 1px solid #F9D783;
+  border-radius: 25px;
+  padding: 8px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
 }
 
 header {
@@ -142,4 +153,27 @@ header .container .menu .main-menu > nav > a.active::after, header .container .m
   left: 50%;
   bottom: -3px;
   transform: translate(calc(50% - 15px));
+}
+
+.banner {
+  background-color: #F0EFE9;
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  margin: auto;
+}
+.banner .text-large {
+  font-size: 30px;
+  font-weight: 800;
+}
+@media (min-width: 992px) {
+  .banner .text-large {
+    font-family: "DM Sans", sans-serif;
+  }
+}
+
+.text-small {
+  font-family: "Inter", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
 }
