--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body {
   color: #191919;
   border-color: 1px solid #F9D783;
   border-radius: 25px;
-  padding: 8px 25px;
+  padding: 12px 25px;
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
@@ -35,13 +35,23 @@ body {
 }
 
 .btn-transparent {
+  background-color: transparent;
   color: #191919;
-  border-color: 1px solid #F9D783;
+  border-color: 1px solid #191919;
   border-radius: 25px;
-  padding: 8px 25px;
+  padding: 12px 25px;
   text-decoration: none;
   font-weight: 600;
   font-size: 16px;
+}
+.btn-transparent i {
+  margin-left: 7px;
+  font-size: 0.9em;
+}
+.btn-transparent:hover {
+  background-color: #191919;
+  border: 10 px solid #191919;
+  color: #F0EFE9;
 }
 
 header {
@@ -154,26 +164,53 @@ header .container .menu .main-menu > nav > a.active::after, header .container .m
   bottom: -3px;
   transform: translate(calc(50% - 15px));
 }
+header .container .btn-login {
+  padding-top: 12px;
+  padding-bottom: 12px;
+}
 
-.banner {
+.showcase {
   background-color: #F0EFE9;
+}
+.showcase .container {
   display: flex;
-  flex-direction: column;
-  width: 300px;
-  margin: auto;
+  justify-content: space-between;
+  align-items: center;
 }
-.banner .text-large {
-  font-size: 30px;
+.showcase .container .content {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  text-align: center;
+}
+.showcase .container .content h1 {
+  font-family: "DM Sans", sans-serif;
   font-weight: 800;
+  font-size: 40px;
 }
-@media (min-width: 992px) {
-  .banner .text-large {
-    font-family: "DM Sans", sans-serif;
+@media (min-width: 768px) {
+  .showcase .container .content h1 {
+    font-size: 70;
   }
 }
-
-.text-small {
-  font-family: "Inter", sans-serif;
+@media (min-width: 1400px) {
+  .showcase .container .content h1 {
+    font-size: 86;
+  }
+}
+.showcase .container .content p {
   font-size: 20px;
-  font-weight: 400;
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.showcase .container .content a {
+  margin-right: 10px;
+}
+.showcase .container img {
+  margin-right: -50px;
+  display: none;
+}
+@media (min-width: 1200px) {
+  .showcase .container img {
+    display: block;
+  }
 }
