--- a/css/style.scss
+++ b/css/style.scss
@@ -22,7 +22,7 @@ body {
     color: #191919;
     border-color: 1px solid #F9D783;
     border-radius: 25px;
-    padding: 8px 25px;
+    padding: 12px 25px;
     text-decoration: none;
     font-weight: 600;
     font-size: 16px;
@@ -38,14 +38,26 @@ body {
 }
 
 .btn-transparent {
+    background-color: transparent;
     color: #191919;
-    border-color: 1px solid #F9D783;
+    border-color: 1px solid #191919;
     border-radius: 25px;
-    padding: 8px 25px;
+    padding: 12px 25px;
     text-decoration: none;
     font-weight: 600;
     font-size: 16px;
+    i {
+        margin-left: 7px;
+        font-size: 0.9em;
+    }
+    &:hover {
+        background-color: #191919;
+        border: 10 px solid #191919;
+        color: #F0EFE9;
+    }
 }
+
+
 
 header {
     display: flex;
@@ -181,44 +193,107 @@ header {
                 }
             }
         }
-    }
-}
 
-// STYLING BANNER
-
-.banner {
-    background-color: #F0EFE9;
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    margin: auto;
-    
-
-    .pitch{
-        
-    }
-
-    .text-large{
-        font-size: 30px;
-        font-weight: 800;
-    }
-
-    @media (min-width: 992px) {
-        .text-large {
-            // font-size: 96px; i desktop
-            // font-weight: 800; i desktop
-            font-family: 'DM Sans', sans-serif;
+        .btn-login {
+            padding-top: 12px;
+            padding-bottom: 12px;
         }
     }
 }
 
 
+.showcase {
+    background-color: #F0EFE9;
 
-.text-small {
-    font-family: 'Inter', sans-serif;
-    font-size: 20px;
-    font-weight: 400;
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+
+        .content {
+            padding-top: 80px;
+            padding-bottom: 80px;
+            text-align: center;
+
+
+            h1 {
+                font-family: 'DM Sans', sans-serif; 
+                font-weight: 800;
+                font-size: 40px;
+                
+                @media (min-width: 768px) {
+                    font-size: 70px;
+                }
+
+                @media (min-width: 1400px) {
+                    font-size: 86px;
+                }
+            }
+
+            p {
+                font-size: 18px;
+                padding-top: 40px;
+                padding-bottom: 40px;
+                padding-left: 10px;
+                padding-right: 10px;
+
+                @media (min-width: 768px) {
+                    font-size: 20px;
+                    padding-left: 0;
+                    padding-right: 0;
+            }
+
+            a {
+                margin-right: 10px;
+                display: block;
+            }
+
+        }
+
+        img {
+            margin-right: -50px;
+            display: none;
+
+            @media (min-width: 1200px) {
+                display: block;
+                
+            }
+        }
+    }
 }
+
+// STYLING BANNER
+
+// .banner {
+//     background-color: #F0EFE9;
+//     display: flex;
+//     flex-direction: column;
+//     width: 300px;
+//     margin: auto;
+    
+
+//     .pitch{
+        
+//     }
+
+//     .text-large{
+//         font-size: 30px;
+//         font-weight: 800;
+//     }
+
+//     @media (min-width: 992px) {
+//         .text-large {
+//             font-family: 'DM Sans', sans-serif;
+//         }
+//     }
+// }
+// .text-small {
+//     font-family: 'Inter', sans-serif;
+//     font-size: 20px;
+//     font-weight: 400;
+// }
+
+
 
 
 
