--- a/css/style.scss
+++ b/css/style.scss
@@ -12,7 +12,7 @@ body {
     font-size: 16px;
     font-weight: 400;
     margin: 0; 
-    background-color: #F0EFE9;
+    // background-color: #F0EFE9;
 }
 
 
@@ -56,9 +56,6 @@ body {
         color: #F0EFE9;
     }
 }
-
-
-
 header {
     display: flex;
     background-color: #F0EFE9;
@@ -162,13 +159,8 @@ header {
                 justify-content: space-between;
                 align-items: center;
                 padding-top: 10px;
-
-            }
-
-
+            }      
             .main-menu>nav>a {
-
-
                 display: inline-block;
                 text-decoration: none;
                 color: #191919;
@@ -193,27 +185,27 @@ header {
                 }
             }
         }
-
+        
         .btn-login {
             padding-top: 12px;
             padding-bottom: 12px;
         }
     }
 }
-
-
 .showcase {
     background-color: #F0EFE9;
-
     .container {
         display: flex;
         justify-content: space-between;
         align-items: center;
-
         .content {
-            padding-top: 80px;
-            padding-bottom: 80px;
+            padding-top: 40px;
+            padding-bottom: 40px;
             text-align: center;
+
+            @media (min-width: 1200px) {
+                text-align: left;
+            }
 
 
             h1 {
@@ -229,7 +221,6 @@ header {
                     font-size: 86px;
                 }
             }
-
             p {
                 font-size: 18px;
                 padding-top: 40px;
@@ -242,61 +233,55 @@ header {
                     padding-left: 0;
                     padding-right: 0;
             }
-
-            a {
-                margin-right: 10px;
-                display: block;
-            }
-
         }
+            a {
+                margin-right: 0;
+                display: block;
+                margin-bottom: 20px;
 
+                @media (min-width: 768px) {
+                    display: inline-block;
+                    margin-right: 10px;
+                }
+            }
+        }
         img {
             margin-right: -50px;
             display: none;
 
             @media (min-width: 1200px) {
-                display: block;
-                
+                display: block;             
             }
+
+    
         }
-    }
+    }   
 }
 
-// STYLING BANNER
-
-// .banner {
-//     background-color: #F0EFE9;
-//     display: flex;
-//     flex-direction: column;
-//     width: 300px;
-//     margin: auto;
+.img-advertising {
+    display: flex;
     
+    
+    justify-content: center;
+    img {
+        display: none;
 
-//     .pitch{
-        
-//     }
+        @media (min-width: 992px) {
+            display: block;
+            padding-top: 45px;
+            padding-bottom: 40px;
+            padding-right: 30px;
+            padding-left: 30px;
+         }
 
-//     .text-large{
-//         font-size: 30px;
-//         font-weight: 800;
-//     }
+         @media (min-width: 1200px) {
+            display: block;
+            padding-top: 98px;
+            padding-bottom: 30px;
+            padding-right: 50px;
+            padding-left: 50px;
 
-//     @media (min-width: 992px) {
-//         .text-large {
-//             font-family: 'DM Sans', sans-serif;
-//         }
-//     }
-// }
-// .text-small {
-//     font-family: 'Inter', sans-serif;
-//     font-size: 20px;
-//     font-weight: 400;
-// }
-
-
-
-
-
-
-
+         }
+    }
+}
 
