--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,300;9..40,400;9..40,600;9..40,700&family=Hanken+Grotesk:wght@200;300;400;500;600&display=swap");
 * {
@@ -266,6 +267,20 @@ header .container .btn-login {
 
 .features {
   padding: 20px;
+  margin-top: 50px;
+  border: 1px solid black;
+}
+@media (min-width: 1200px) {
+  .features {
+    padding: 70px;
+    display: flex;
+  }
+}
+@media (min-width: 1200px) {
+  .features .container {
+    display: flex;
+    margin: 0 auto;
+  }
 }
 .features .container .content {
   text-align: center;
@@ -275,6 +290,8 @@ header .container .btn-login {
 @media (min-width: 1200px) {
   .features .container .content {
     text-align: left;
+    line-height: 1.2;
+    align-items: flex-start;
   }
 }
 .features .container .content h2 {
@@ -296,23 +313,40 @@ header .container .btn-login {
     font-size: 45px;
   }
 }
-.features .container a {
+.features .container .content a {
   margin-right: 40px;
   margin-left: 40px;
   display: block;
   margin-bottom: 20px;
 }
 @media (min-width: 768px) {
-  .features .container a {
+  .features .container .content a {
     display: inline-block;
-    margin-right: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .features .container .content a {
+    display: block; /* Gör länken till en blocknivå-element */
+    width: 100%; /* Ta upp hela bredden av föräldern */
+    margin: 0; /* Ta bort marginaler */
+    padding-top: 20px;
+    padding-bottom: 20px;
+    text-align: center; /* Centrera texten inom länken om det behövs */
   }
 }
 @media (min-width: 768px) {
   .features .container .features-consulting {
     display: grid;
-    grid-template-columns: auto auto;
-    grid-template-rows: auto auto;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: 50% 50%;
+    gap: 10px;
+  }
+}
+@media (min-width: 1200px) {
+  .features .container .features-consulting {
+    margin-right: 40px;
+    margin-left: 90px;
+    padding-top: 40px;
   }
 }
 .features .container .features-consulting .box {
@@ -320,12 +354,39 @@ header .container .btn-login {
   flex-direction: column;
   align-items: center;
 }
+@media (min-width: 1200px) {
+  .features .container .features-consulting .box {
+    margin-right: 30px;
+    padding-right: 100px;
+    width: 130%;
+  }
+}
 .features .container .features-consulting .box img {
   margin-bottom: 20px;
   margin-top: 20px;
   width: 20%;
+  color: #191919;
+}
+.features .container .features-consulting .box h3 {
+  font-family: "DM Sans", sans-serif;
+  font-size: 22px;
+  font-weight: 700;
 }
 .features .container .features-consulting .box p {
   padding: 10px 10px;
   text-align: center;
+  font-family: "Inter", sans-serif;
+  font-size: 16px;
+  color: #707070;
+}
+@media (min-width: 1200px) {
+  .features .container .features-consulting .box p {
+    text-align: left;
+    padding: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .features .container .features-consulting .box {
+    align-items: flex-start;
+  }
 }
