working with section about

--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,27 @@ body {
   margin: 0;
 }
 
+.heading-red {
+  color: #F94D1C;
+  font-size: 18px;
+  font-family: "Inter", sans-serif;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
+h3 {
+  color: #191919;
+  font-family: "DM Sans", sans-serif;
+  font-size: 28px;
+  font-weight: 700;
+  margin-bottom: 30px;
+}
+@media (min-width: 768px) {
+  h3 {
+    font-size: 45px;
+  }
+}
+
 .btn-yellow {
   background-color: #F9D783;
   color: #191919;
@@ -53,6 +74,25 @@ body {
   background-color: #191919;
   border: 10 px solid #191919;
   color: #F0EFE9;
+}
+
+.btn-black {
+  background-color: #191919;
+  color: #F0EFE9;
+  border-color: 1px solid #F9D783;
+  border-radius: 25px;
+  padding: 12px 25px;
+  text-decoration: none;
+  font-weight: 600;
+  font-size: 16px;
+}
+.btn-black i {
+  font-size: 0.9em;
+}
+.btn-black:hover {
+  background-color: #F9D783;
+  border: 10 px solid #F9D783;
+  color: #191919;
 }
 
 header {
@@ -203,7 +243,7 @@ header .container .btn-login {
     font-size: 86px;
   }
 }
-.showcase .container .content p {
+.showcase .container .content h3 {
   font-size: 18px;
   padding-top: 40px;
   padding-bottom: 40px;
@@ -211,7 +251,7 @@ header .container .btn-login {
   padding-right: 10px;
 }
 @media (min-width: 768px) {
-  .showcase .container .content p {
+  .showcase .container .content h3 {
     font-size: 20px;
     padding-left: 0;
     padding-right: 0;
@@ -268,7 +308,6 @@ header .container .btn-login {
 .features {
   padding: 20px;
   margin-top: 50px;
-  border: 1px solid black;
 }
 @media (min-width: 1200px) {
   .features {
@@ -280,6 +319,7 @@ header .container .btn-login {
   .features .container {
     display: flex;
     margin: 0 auto;
+    border: 1px solid black;
   }
 }
 .features .container .content {
@@ -301,7 +341,7 @@ header .container .btn-login {
   margin-bottom: 30px;
   margin-top: 30px;
 }
-.features .container .content p {
+.features .container .content h3 {
   color: #191919;
   font-family: "DM Sans", sans-serif;
   font-size: 28px;
@@ -309,8 +349,13 @@ header .container .btn-login {
   margin-bottom: 30px;
 }
 @media (min-width: 768px) {
-  .features .container .content p {
+  .features .container .content h3 {
     font-size: 45px;
+  }
+}
+@media (min-width: 1200px) {
+  .features .container .content h3 {
+    max-width: 90%;
   }
 }
 .features .container .content a {
@@ -388,5 +433,61 @@ header .container .btn-login {
 @media (min-width: 1200px) {
   .features .container .features-consulting .box {
     align-items: flex-start;
+  }
+}
+
+.about {
+  display: flex;
+  flex-direction: column-reverse;
+  text-align: center;
+  padding: 40px 40px;
+  align-items: center;
+}
+@media (min-width: 1200px) {
+  .about {
+    display: flex;
+    flex-direction: row;
+    text-align: left;
+    border: 1px solid black;
+    padding: 60px;
+  }
+}
+.about .founder {
+  text-align: center;
+}
+@media (min-width: 1200px) {
+  .about .founder {
+    text-align: left;
+  }
+}
+.about .founder img {
+  width: 50%;
+}
+@media (min-width: 1200px) {
+  .about .founder img {
+    width: 100%;
+    margin-top: 30px;
+  }
+}
+.about .founder p {
+  font-family: "DM Sans", sans-serif;
+}
+@media (min-width: 1200px) {
+  .about .founder p {
+    position: relative;
+    bottom: 170px;
+    left: -144px;
+    background-color: #BEEBFF;
+    padding: 30px 20px;
+    width: 90%;
+  }
+}
+.about .founder p span {
+  color: #F94D1C;
+  font-weight: 700;
+}
+@media (min-width: 1200px) {
+  .about .content {
+    align-self: flex-start;
   }
 }
